Fix for side-bar layout issue on Safari

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -139,7 +139,7 @@ h3.topic {
 }
 
 .resizable-content {
-  min-height: 30px;
+  min-height: 100%;
   min-width: 30px;
   resize: both;
   overflow: auto;
